# calibration-room

./: [20230328_테스트완료]매뉴얼.odp  캘리브레이션룸_매뉴얼.odp
Map1/: Map1.pgm  Map1.yaml  map_file.txt
auto_pose_estimation/src/lidar_pose_estimator/src/: ICP.cpp  LidarPoseEstimatorCallbacks.cpp
development/auto_pose_estimation/src/depth_pose_estimator/: CMakeLists.txt
development/auto_pose_estimation/src/depth_pose_estimator/launch/: double_depth_pose_estimator_node.launch
development/auto_pose_estimation/src/depth_pose_estimator/params/: depth_pose_estimator_params.yaml  double_depth_pose_estimator_params.yaml  (+2 more)
development/pose_estimation_gui/client/src/: App.vue
development/pose_estimation_gui/server/assets/: cr-settings.json
pose_estimation_gui/client/: package.json  vite.config.js
pose_estimation_gui/client/src/pages/: CalibrationPage.vue  HelpPage.vue  ManipulationPage.vue
pose_estimation_gui/server/: cona.urdf
pose_estimation_gui/server/src/router/: utilites.ts
production/: bashrc.txt
production/auto_pose_estimation/src/utilities_aruco_generator/: CMakeLists.txt  package.xml
production/auto_pose_estimation/src/utilities_aruco_generator/src/: aruco_generator.cpp
production/auto_pose_estimation/src/utilities_ros_astra_camera/: Usage.txt
production/pose_estimation_gui/client/: package.json
production/pose_estimation_gui/client/public/: webviz.html
production/pose_estimation_gui/client/src/: store.js
production/pose_estimation_gui/server/: cona.urdf
production/pose_estimation_gui/server/assets/: cr-settings.json
(+40 files in other folders)
